add page catalog.html

--- a/add-new-service.html
+++ b/add-new-service.html
@@ -14,11 +14,19 @@
   <div class="head-left">
     <div class="head-brand">АС ДИТ</div>
   </div>
+
   <div class="head-right">
+    <div class="template-nav">
+    	<a href="sli-card.html" class="head-right-name">sli-card.html</a>
+    	<a href="index.html" class="head-right-name">index.html</a>
+    	<a href="catalog.html" class="head-right-name">catalog.html</a>
+    	<a href="add-new-service.html" class="head-right-name">add-new-service.html</a>
+    	<a href="add-changes.html" class="head-right-name">add-changes.html</a>
+    </div>
     <div class="head-right-name">Джеймс Бонд</div>
     <div class="head-right-avatar"><img src="img/avatar.png" alt=""></div>  
   </div>
-</div>
+</div> 
 <!-- head -->
 
 <div class="main-cont">
@@ -117,8 +125,9 @@
 			                		<label>Время не меняется ежедневно.</label>
 		                		</div>
 												
+												<!--######## For disable line use class disable-inline-input-row ########-->
 												<!-- inline-input-row-datepick -->
-			                		<div class="inline-input-row-datepick">
+			                		<div class="inline-input-row-datepick disable-inline-input-row">
 			                			<label >Сервис доступен с </label> 
 			                			<select name="" class="form-control" required="required">
 			                				<option value="">10</option>
