--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="css/vendor.css">
-  <link rel="stylesheet" type="text/css" href="http://webfonts.ru/import/firasans.css"> 
-  <link rel="stylesheet" type="text/css" href="http://webfonts.ru/import/opensans.css">  
+
+  <link rel="stylesheet" href="css/bootstrap.min.css" /> 
+  <link rel="stylesheet" href="css/dataTables.bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css"> 
+   
 </head>
 <body>
 
@@ -756,7 +759,11 @@
  
 
 
-	  <script src="scripts/combined.js"></script>
+	  
+	  <script src="js/jquery.min.js"></script>
+	  <script src="js/bootstrap.min.js"></script>
+	  <script src="js/dataTables.bootstrap.js"></script>
+	  <script src="js/script.js"></script>    
 </body>
 </html>
 
