add page-create-sla + first treetable

--- a/add-changes.html
+++ b/add-changes.html
@@ -7,7 +7,10 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css" /> 
   <link rel="stylesheet" href="css/dataTables.bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css"> 
+  <link rel="stylesheet" href="css/jstree.style.min.css"> 
   <link rel="stylesheet" href="css/style.css"> 
+  
    
 </head>
 <body>
@@ -20,6 +23,8 @@
 
   <div class="head-right">
     <div class="template-nav">
+      <a href="catalog-tree.html" class="head-right-name">catalog-tree.html</a>
+      <a href="create-sla.html" class="head-right-name">create-sla.html</a>
     	<a href="sli-card.html" class="head-right-name">sli-card.html</a>
     	<a href="index.html" class="head-right-name">index.html</a>
     	<a href="catalog.html" class="head-right-name">catalog.html</a>
@@ -110,7 +115,7 @@
 												<!-- item-input -->
 												<div class="w60per">
 			                		<label for="">Дата поступления предложения: </label>
-		                			<input type="text" class="form-control " id="" >
+		                			<input type="text" class="form-control " id="date-event-one" >
 	                			</div>
 												<!-- item-input -->
 
@@ -237,8 +242,11 @@
 
 	  
 	  <script src="js/jquery.min.js"></script>
-	  <script src="js/bootstrap.min.js"></script>
 	  <script src="js/dataTables.bootstrap.js"></script>
+	  <script src="js/bootstrap.min.js"></script>
+	  <script src="js/moment-with-locales.js"></script>
+		<script src="js/bootstrap-datetimepicker.js"></script>
+		<script src="js/jstree.min.js"></script>
 	  <script src="js/script.js"></script>    
 </body>
 </html>
