--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/dataTables.bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css"> 
   <link rel="stylesheet" href="css/jstree.style.min.css"> 
+  <link rel="stylesheet" href="css/chosen.css"> 
   <link rel="stylesheet" href="css/style.css"> 
   
    
@@ -42,24 +43,28 @@
     <div class="row">
       
       <!-- main-cont-left -->
-      <div class="col-md-1 col-sm-1 col-xs-1 main-cont-left">
-
-          <div class="main-cont-left-block icon-block active-icon">
-            <a href="#" class="main-cont-left-icon IconCatalogNormal54"></a>
-            Каталог услуг
-          </div>
-          <div class="main-cont-left-block icon-block  ">
-            <a href="#" class="main-cont-left-icon IconHandbookNormal54"></a>
-            Справочники
-          </div>
-          <div class="main-cont-left-block icon-block ">
-            <a href="#" class="main-cont-left-icon IconMetamodelNorma54"></a>
-            Метамодели
-          </div>
+      	<div class="col-md-1 col-sm-1 col-xs-1 main-cont-left">
+    <div class="main-cont-left-block icon-block active-icon">
+      <a href="#" class="main-cont-left-icon IconCatalogNormal54"></a>
+      Каталог услуг
+    </div>
+    <div class="main-cont-left-block icon-block  ">
+      <a href="#" class="main-cont-left-icon IconHandbookNormal54"></a>
+      Справочники
+      <div class="main-cont-left-block-hoverMenu">
+      	<a href="" class="main-cont-left-block-hoverMenu-item">Продуктовый класификатор</a>
+      	<a href="" class="main-cont-left-block-hoverMenu-item">Операционный класификатор</a>
+      	<a href="" class="main-cont-left-block-hoverMenu-item">Перечень критичных IT-системч</a>
       </div>
+    </div>
+    <div class="main-cont-left-block icon-block ">
+      <a href="#" class="main-cont-left-icon IconMetamodelNorma54"></a>
+      Метамодели
+    </div>
+</div> 
       <!-- main-cont-left -->
+      
       <div class="col-md-1 col-sm-1 col-xs-1 "></div> 
-
 
       <!-- main-cont-right -->
         <div class="main-cont-right col-md-11 col-md-11 col-sm-11 col-xs-11">
@@ -361,6 +366,7 @@
 	  <script src="js/moment-with-locales.js"></script>
 		<script src="js/bootstrap-datetimepicker.js"></script>
 		<script src="js/jstree.min.js"></script>
+		<script src="js/chosen.jquery.min.js"></script>
 	  <script src="js/script.js"></script>    
 </body>
 </html>
