Add button export

--- a/add-new-service.html
+++ b/add-new-service.html
@@ -95,7 +95,8 @@
 	                  <div class="circle-button ">
 	                    <a href="#" class="IconDeleteNormal50"></a>
 	                  </div>
-	                  <button type="button" class="btn btn-primary">Предложить корректировку</button>
+	                  <button type="button" class="btn btn-primary mr20">Предложить корректировку</button>
+	                  <button type="button" class="btn btn-primary">Экспорт</button> 
 	                </div>
 	                <!-- icon-line -->
 
