--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 	                  <div class="circle-button">
 	                    <a href="#" class="IconPrintNormal50"></a>
 	                  </div>
-	                  <button type="button" class="btn btn-primary">Предложить корректировку</button>
+	                  <button type="button" class="btn btn-primary mr25">Предложить корректировку</button>
+	                  <button type="button" class="btn btn-primary">Экспорт</button> 
 	                </div>
 	                <!-- icon-line -->
 	              </div>
