add menu cabinet

--- a/add-changes.html
+++ b/add-changes.html
@@ -33,7 +33,17 @@
     	<a href="add-changes.html" class="head-right-name">add-changes.html</a>
     </div>
     <div class="head-right-name">Джеймс Бонд</div>
-    <div class="head-right-avatar"><img src="img/avatar.png" alt=""></div>  
+    <div class="head-right-avatar">
+      <img src="img/avatar.png" alt="">
+      <div class="head-right-avatar-menu">
+        <a href="#" class="head-right-avatar-menu-item">
+          Личный кабинет
+        </a>
+        <a href="#" class="head-right-avatar-menu-item">
+          Выйти
+        </a>
+      </div>
+    </div>  
   </div>
 </div> 
 <!-- head -->
