edit datapicker + two page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
   <div class="head-right">
     <div class="template-nav">
+      <a href="metamodel-dataTable.html" class="head-right-name">metamodel-dataTable.html</a>
+      <a href="metamodel-configBase.html" class="head-right-name">metamodel-configBase.html</a>
       <a href="catalog-tree.html" class="head-right-name">catalog-tree.html</a>
       <a href="create-sla.html" class="head-right-name">create-sla.html</a>
     	<a href="sli-card.html" class="head-right-name">sli-card.html</a>
@@ -373,7 +375,7 @@
 	  
 	  <script src="js/jquery.min.js"></script>
 	  <script src="js/dataTables.bootstrap.js"></script>
-	  <script src="js/bootstrap.min.js"></script>
+	  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 	  <script src="js/moment-with-locales.js"></script>
 		<script src="js/bootstrap-datetimepicker.js"></script>
 		<script src="js/jstree.min.js"></script>
