--- a/metamodel-dataTable.html
+++ b/metamodel-dataTable.html
@@ -24,6 +24,7 @@
 
   <div class="head-right">
     <div class="template-nav">
+      <a href="methamodel.html" class="head-right-name">methamodel.html</a> 
       <a href="metamodel-dataTable.html" class="head-right-name">metamodel-dataTable.html</a>
       <a href="metamodel-configBase.html" class="head-right-name">metamodel-configBase.html</a>
       <a href="catalog-tree.html" class="head-right-name">catalog-tree.html</a>
