add list page 3-items

--- a/metamodel-dataTable.html
+++ b/metamodel-dataTable.html
@@ -24,16 +24,19 @@
 
   <div class="head-right">
     <div class="template-nav">
-      <a href="methamodel.html" class="head-right-name">methamodel.html</a> 
-      <a href="metamodel-dataTable.html" class="head-right-name">metamodel-dataTable.html</a>
-      <a href="metamodel-configBase.html" class="head-right-name">metamodel-configBase.html</a>
-      <a href="catalog-tree.html" class="head-right-name">catalog-tree.html</a>
-      <a href="create-sla.html" class="head-right-name">create-sla.html</a>
-    	<a href="sli-card.html" class="head-right-name">sli-card.html</a>
-    	<a href="index.html" class="head-right-name">index.html</a>
-    	<a href="catalog.html" class="head-right-name">catalog.html</a>
-    	<a href="add-new-service.html" class="head-right-name">add-new-service.html</a>
-    	<a href="add-changes.html" class="head-right-name">add-changes.html</a>
+      <a href="product.html" class="head-right-name">product</a> 
+      <a href="crit-syst.html" class="head-right-name">crit-syst</a> 
+      <a href="oper-catalog.html" class="head-right-name">oper-catalog</a> 
+      <a href="methamodel.html" class="head-right-name">methamodel</a> 
+      <a href="metamodel-dataTable.html" class="head-right-name">metamodel-dataTable</a>
+      <a href="metamodel-configBase.html" class="head-right-name">metamodel-configBase</a>
+      <a href="catalog-tree.html" class="head-right-name">catalog-tree</a>
+      <a href="create-sla.html" class="head-right-name">create-sla</a>
+    	<a href="sli-card.html" class="head-right-name">sli-card</a>
+    	<a href="index.html" class="head-right-name">index</a>
+    	<a href="catalog.html" class="head-right-name">catalog</a>
+    	<a href="add-new-service.html" class="head-right-name">add-new-service</a>
+    	<a href="add-changes.html" class="head-right-name">add-changes</a>
     </div>
     <div class="head-right-name">Джеймс Бонд</div>
     <div class="head-right-avatar">
@@ -115,13 +118,13 @@
 										<!-- icon-line -->
 					                <div class="flex-start m25_0">
 					                	<div class="circle-button active-icon">
-					                    <a href="#" class="IconHierarchyNormal50"></a>
+					                    <a href="#" class="IconOneColumn50"></a>
 					                  </div>
 
 					                  <div class="mr25">Одна колонка</div>
 
 					                  <div class="circle-button active-icon">
-					                    <a href="#" class="IconFlatTableNormal50"></a>
+					                    <a href="#" class="IconTwoColumnsNormal50"></a>
 					                  </div>
 
 					                  <div>Две колонки</div>
