Add toggle Table and toggle filter

--- a/catalog-tree.html
+++ b/catalog-tree.html
@@ -86,22 +86,22 @@
         <div class="main-cont-right col-md-11 col-md-11 col-sm-11 col-xs-11">
 						<div class="main-cont-right-wraper">
 	            <!-- breadcrumb -->
-	            <div class="main-cont-right-breadcrumb">
-	            	<div class="main-cont-right-breadcrumb-leftpart">
-	            		<ul class="breadcrumb">
-			                <li><a href="#">Каталог услуг</a> </li>
-			                <li class="active">Карточка услуги ITS001.001.004</li>
-			            </ul>
-	            	</div>
-	            	<div class="main-cont-right-breadcrumb-rightpart">
-	            			<div class="breadcrumb-button ">
-	                    <a href="#" class="IconSuggestionNormal30"></a>
-	                  </div>
-	                  <div class="breadcrumb-button active-icon">
-	                    <a href="#" class="IconHistoryNormal30"></a>
-	                  </div>
-	            	</div>
-	            </div>
+	           		 <div class="main-cont-right-breadcrumb">
+	<div class="main-cont-right-breadcrumb-leftpart">
+		<ul class="breadcrumb">
+        <li><a href="#">Каталог услуг</a> </li>
+        <li class="active">Карточка услуги ITS001.001.004</li>
+    </ul>
+	</div>
+	<div class="main-cont-right-breadcrumb-rightpart">
+			<!-- <div class="breadcrumb-button ">
+        <a href="#" class="IconSuggestionNormal30"></a>
+      </div>
+      <div class="breadcrumb-button active-icon">
+        <a href="#" class="IconHistoryNormal30"></a>
+      </div> -->
+	</div>
+</div>
 	            <!-- breadcrumb -->
 
 	            <!-- serch-line -->
