--- a/catalog.html
+++ b/catalog.html
@@ -86,34 +86,34 @@
         <div class="main-cont-right col-md-11 col-md-11 col-sm-11 col-xs-11">
 						<div class="main-cont-right-wraper">
 	            <!-- breadcrumb -->
-	            <div class="main-cont-right-breadcrumb">
-	            	<div class="main-cont-right-breadcrumb-leftpart">
-	            		<ul class="breadcrumb">
-			                <li><a href="#">Каталог услуг</a> </li>
-			                <li class="active">Карточка услуги ITS001.001.004</li>
-			            </ul>
-	            	</div>
-	            	<div class="main-cont-right-breadcrumb-rightpart">
-	            			<div class="breadcrumb-button ">
-	                    <a href="#" class="IconSuggestionNormal30"></a>
-	                  </div>
-	                  <div class="breadcrumb-button active-icon">
-	                    <a href="#" class="IconHistoryNormal30"></a>
-	                  </div>
-	            	</div>
-	            </div>
+	           		 <div class="main-cont-right-breadcrumb">
+	<div class="main-cont-right-breadcrumb-leftpart">
+		<ul class="breadcrumb">
+        <li><a href="#">Каталог услуг</a> </li>
+        <li class="active">Карточка услуги ITS001.001.004</li>
+    </ul>
+	</div>
+	<div class="main-cont-right-breadcrumb-rightpart">
+			<!-- <div class="breadcrumb-button ">
+        <a href="#" class="IconSuggestionNormal30"></a>
+      </div>
+      <div class="breadcrumb-button active-icon">
+        <a href="#" class="IconHistoryNormal30"></a>
+      </div> -->
+	</div>
+</div>
 	            <!-- breadcrumb -->
 
 	            <!-- serch-line -->
 							<div class="serch-line flex-start mt40">
 								<input type="text" name="" id="" class="form-control " value="" placeholder="Наименование сервиса" >
 								<button type="button" class="btn btn-primary mr20">Найти</button>
-								<button type="button" class="btn btn-success mr20">Фильтровать продукты</button>
+								<button type="button" class="btn btn-success mr20 row-catalog-date-pick-toggle">Фильтровать продукты</button>
 							</div>
 	            <!-- serch-line -->
 
 	            <!-- row-catalog-date-pick -->
-	            <div class="row-catalog-date-pick">
+	            <div class="row-catalog-date-pick row-catalog-date-pick-toggle-filter ">
 	            	<div class="row ">
 										<!-- item-column -->			            	
 		            		<div class="col-md-2">
