Add action in button

--- a/add-changes.html
+++ b/add-changes.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css"> 
   <link rel="stylesheet" href="css/jstree.style.min.css"> 
   <link rel="stylesheet" href="css/chosen.css"> 
+  <link rel="stylesheet" href="css/jquery.treegrid.css"> 
   <link rel="stylesheet" href="css/style.css"> 
   
    
@@ -324,6 +325,8 @@
 		<script src="js/bootstrap-datetimepicker.js"></script>
 		<script src="js/jstree.min.js"></script>
 		<script src="js/chosen.jquery.min.js"></script>
+		<script src="js/jquery.treegrid.min.js"></script>
+		<script src="js/jquery.treegrid.bootstrap3.js"></script>
 	  <script src="js/script.js"></script>    
 </body>
 </html>
