--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="css/chosen.css"> 
   <link rel="stylesheet" href="css/jquery.treegrid.css"> 
   <link rel="stylesheet" href="css/style.css"> 
-  
+  <link rel="stylesheet" href="css/media/css/res1200.css">
+  <link rel="stylesheet" href="css/media/css/res992.css">
+  <link rel="stylesheet" href="css/media/css/res768.css">
+  <link rel="stylesheet" href="css/media/css/res480.css">
+  <link rel="stylesheet" href="css/media/css/res320.css">
    
 </head>
 <body>
@@ -383,15 +387,15 @@
     <a href="page.php?" class="IconCreateServiceNormal50"></a>
   </div>
   <div class="circle-button button-edit button-href-checkbox">
-    <a href="page.php?" class="IconEditNormal50"></a>
+    <a href="one-page.php?" class="IconEditNormal50"></a>
   </div>
   <div class="circle-button button-delete button-href-checkbox">
-    <a href="page.php?" class="IconDeleteNormal50"></a>
+    <a href="two-page.php?" class="IconDeleteNormal50"></a>
   </div>
   <div class="circle-button button-print button-href-checkbox">
-    <a href="page.php?" class="IconPrintNormal50"></a>
+    <a href="three-page.php?" class="IconPrintNormal50"></a>
   </div>
-  <button type="button" class="btn btn-primary">Предложить корректировку</button>
+  <button type="button" class="btn btn-primary">Предложить корректировку</button> 
 </div>
 	            <!-- icon-line -->
 	             
