--- a/sli-card.html
+++ b/sli-card.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="css/chosen.css"> 
   <link rel="stylesheet" href="css/jquery.treegrid.css"> 
   <link rel="stylesheet" href="css/style.css"> 
-  
+  <link rel="stylesheet" href="css/media/css/res1200.css">
+  <link rel="stylesheet" href="css/media/css/res992.css">
+  <link rel="stylesheet" href="css/media/css/res768.css">
+  <link rel="stylesheet" href="css/media/css/res480.css">
+  <link rel="stylesheet" href="css/media/css/res320.css">
    
 </head>
 <body>
