fix bags + filter dataTable

--- a/index.html
+++ b/index.html
@@ -4,19 +4,6 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="css/vendor.css">
-
-  <link rel="stylesheet" href="css/bootstrap.min.css" /> 
-  <link rel="stylesheet" href="css/dataTables.bootstrap.min.css">
-  <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css"> 
-  <link rel="stylesheet" href="css/jstree.style.min.css"> 
-  <link rel="stylesheet" href="css/chosen.css"> 
-  <link rel="stylesheet" href="css/jquery.treegrid.css"> 
-  <link rel="stylesheet" href="css/style.css"> 
-  <link rel="stylesheet" href="css/media/css/res1200.css">
-  <link rel="stylesheet" href="css/media/css/res992.css">
-  <link rel="stylesheet" href="css/media/css/res768.css">
-  <link rel="stylesheet" href="css/media/css/res480.css">
-  <link rel="stylesheet" href="css/media/css/res320.css">
    
 </head>
 <body>
@@ -487,6 +474,8 @@
 										</tr>
 									</table> 
 		            <!-- table-tree -->
+
+		            
 					</div>	
       	</div>
       <div class="clearfix"></div>
@@ -508,7 +497,8 @@
 		<script src="js/chosen.jquery.min.js"></script>
 		<script src="js/jquery.treegrid.min.js"></script>
 		<script src="js/jquery.treegrid.bootstrap3.js"></script>
-	  <script src="js/script.js"></script>    
+		<script src="js/jquery.dataTables.columnFilter.js"></script>
+	  <script src="js/script.js"></script>      
 </body>
 </html>
 
