--- a/create-sla.html
+++ b/create-sla.html
@@ -84,7 +84,8 @@
 	<div class="main-cont-right-breadcrumb-leftpart">
 		<ul class="breadcrumb">
         <li><a href="#">Каталог услуг</a> </li>
-        <li class="active">Карточка услуги ITS001.001.004</li>
+         <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li>
+        <li class="active">Карточка услуги ITS001.001.004</li> 
     </ul>
 	</div>
 	<div class="main-cont-right-breadcrumb-rightpart">
@@ -521,7 +522,8 @@
 		<script src="js/jquery.treegrid.min.js"></script>
 		<script src="js/jquery.treegrid.bootstrap3.js"></script>
 		<script src="js/jquery.dataTables.columnFilter.js"></script>
-	  <script src="js/script.js"></script>      
+	  <script src="js/script.js"></script>     
+	  <script src="js/close-window.js"></script>      
 </body>
 </html>
 
