--- a/catalog-tree.html
+++ b/catalog-tree.html
@@ -16,6 +16,7 @@
 
   <div class="head-right">
     <div class="template-nav">
+      <a href="metamodel-rightToggle.html" class="head-right-name">metamodel-rightToggle</a> 
       <a href="product.html" class="head-right-name">product</a> 
       <a href="crit-syst.html" class="head-right-name">crit-syst</a> 
       <a href="oper-catalog.html" class="head-right-name">oper-catalog</a> 
@@ -29,15 +30,15 @@
     	<a href="catalog.html" class="head-right-name">catalog</a>
     	<a href="add-new-service.html" class="head-right-name">add-new-service</a>
     	<a href="add-changes.html" class="head-right-name">add-changes</a>
-    </div>
-    <div class="head-right-name">Джеймс Бонд</div>
-    <div class="head-right-avatar">
       <img src="img/avatar.png" alt="">
+    </div>
       <div class="head-right-avatar-menu">
         <a href="#" class="head-right-avatar-menu-item">
           Личный кабинет
-        </a>
         <a href="#" class="head-right-avatar-menu-item">
+        </a>
+    <div class="head-right-name">Джеймс Бонд</div>
+    <div class="head-right-avatar">
           Выйти
         </a>
       </div>
@@ -432,21 +433,23 @@
 
 							<!-- icon-line -->
 	                <div class="flex-start m25_0">
-	<div class="circle-button active-icon">
+	
+ <!--  <div class="circle-button active-icon">
     <a href="#" class="IconCreateGroupNormal50"></a>
-  </div>
-  <div class="circle-button ">
+  </div> -->
+  
+  <div class="circle-button button-add button-href-checkbox active-icon" data-alert="no">
     <a href="page.php?" class="IconCreateServiceNormal50"></a>
   </div>
-  <div class="circle-button button-edit button-href-checkbox">
+  
+  <div class="circle-button button-edit button-href-checkbox" data-alert="no">
     <a href="one-page.php?" class="IconEditNormal50"></a>
   </div>
-  <div class="circle-button button-delete button-href-checkbox">
-    <a href="two-page.php?" class="IconDeleteNormal50"></a>
-  </div>
-  <div class="circle-button button-print button-href-checkbox">
+  
+  <div class="circle-button button-print button-href-checkbox active-icon" data-alert="no">
     <a href="three-page.php?" class="IconPrintNormal50"></a>
   </div>
+
   <button type="button" class="btn btn-primary">Предложить корректировку</button> 
 </div>
 	            <!-- icon-line -->
