--- a/metamodel-rightToggle.html
+++ b/metamodel-rightToggle.html
@@ -111,10 +111,9 @@
 	                  <div class="circle-button ">
 	                    <a href="#" class="IconDeleteNormal50"></a>
 	                  </div>
-	                  <div class="circle-button">
-	                    <a href="#" class="IconPrintNormal50"></a>
+	                  <div class="circle-button toggle-rightTable">
+	                    <a href="#" class="IconCardOfModelNormal"></a>
 	                  </div>
-	                  <button type="button" class="btn btn-primary mr25">Предложить корректировку</button>
 	                  <button type="button" class="btn btn-primary">Экспорт</button> 
 
 	                </div>
@@ -149,7 +148,40 @@
   </div>
 </div> 
 
+<!-- right-toggleMenu -->
+<div class="right-slidePanel">
 
+	<div class="right-slidePanel-head">
+		<div class="circle-button toggle-rightTable">
+	    <a href="#" class="IconBackNormal"></a>
+	  </div>
+	  <p>Название типовой конфигурационной модели</p> 
+  </div>
+
+  <table class="table table-hover">
+  	<tbody>
+  		<tr>
+  			<td>Описание</td>
+  			<td>Установка ПК,  а также программного обеспечения в части операционной 
+				системы, драйверов, базового офисного и другого стандартного ПО. 
+				Поддержка аппаратной части рабочих мест пользователей. Подключение к ЛВС 
+				Банка России.
+				</td>
+  		</tr>
+  		<tr>
+  			<td>Владелец</td>
+  			<td>Разарбатывается</td>
+  		</tr>
+  		<tr>
+  			<td>Дата корректировки:</td>
+  			<td>Системеная</td>
+  		</tr>
+  	</tbody>
+  </table>
+
+	
+</div>
+<!-- right-toggleMenu -->
 
 
 	  
