--- a/add-new-service.html
+++ b/add-new-service.html
@@ -16,6 +16,7 @@
 
   <div class="head-right">
     <div class="template-nav">
+      <a href="metamodel-rightToggle.html" class="head-right-name">metamodel-rightToggle</a> 
       <a href="product.html" class="head-right-name">product</a> 
       <a href="crit-syst.html" class="head-right-name">crit-syst</a> 
       <a href="oper-catalog.html" class="head-right-name">oper-catalog</a> 
@@ -29,15 +30,15 @@
     	<a href="catalog.html" class="head-right-name">catalog</a>
     	<a href="add-new-service.html" class="head-right-name">add-new-service</a>
     	<a href="add-changes.html" class="head-right-name">add-changes</a>
-    </div>
-    <div class="head-right-name">Джеймс Бонд</div>
-    <div class="head-right-avatar">
       <img src="img/avatar.png" alt="">
+    </div>
       <div class="head-right-avatar-menu">
         <a href="#" class="head-right-avatar-menu-item">
           Личный кабинет
-        </a>
         <a href="#" class="head-right-avatar-menu-item">
+        </a>
+    <div class="head-right-name">Джеймс Бонд</div>
+    <div class="head-right-avatar">
           Выйти
         </a>
       </div>
