--- a/add-changes.html
+++ b/add-changes.html
@@ -80,15 +80,15 @@
 
 	            <!-- breadcrumb -->
 	            		<div class="main-cont-right-breadcrumb">
-    	<div class="main-cont-right-breadcrumb-leftpart">
+    	<div class="main-cont-right-breadcrumb-leftpart pull-left">
     		<ul class="breadcrumb">
             <li><a href="#">Каталог услуг</a> </li>
-            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li>
-            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li><li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li> 
+            <li><nobr> </nobr><a href="#">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.totam quibusdam molestiae illo perspiciatis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li>
             <li class="active">Карточка услуги ITS001.001.004</li> 
         </ul>
     	</div>
-    	<div class="main-cont-right-breadcrumb-rightpart">
+    	<div class="main-cont-right-breadcrumb-rightpart pull-right">
     			<div class="breadcrumb-button breadcrumb-button-one"  >
             <a  class="IconSuggestionNormal30"></a>
           </div>
@@ -217,7 +217,8 @@
 					</div>
           <!-- hidden-table -->
     	</div>
-    </div>
+    	<div class="clearfix"></div>  
+</div>
 	            <!-- breadcrumb -->
 	            
 							<div class="row row-flex">
