--- a/catalog.html
+++ b/catalog.html
@@ -83,8 +83,8 @@
 	<div class="main-cont-right-breadcrumb-leftpart">
 		<ul class="breadcrumb">
         <li><a href="#">Каталог услуг</a> </li>
-         <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li>
-        <li class="active">Карточка услуги ITS001.001.004</li> 
+         <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li>
+        <li class="active">Карточка услуги ITS001.001.004</li>  
     </ul>
 	</div>
 	<div class="main-cont-right-breadcrumb-rightpart">
@@ -371,19 +371,16 @@
 							<!-- icon-line -->
 	                <div class="flex-start m25_0">
 	
- <!--  <div class="circle-button active-icon">
-    <a href="#" class="IconCreateGroupNormal50"></a>
-  </div> -->
   
-  <div class="circle-button button-add button-href-checkbox active-icon" data-alert="no">
+  <div class="circle-button button-add button-href-checkbox active-icon" >
     <a href="page.php?" class="IconCreateServiceNormal50"></a>
   </div>
   
-  <div class="circle-button button-edit button-href-checkbox" data-alert="no">
+  <div class="circle-button button-edit button-href-checkbox" >
     <a href="one-page.php?" class="IconEditNormal50"></a>
   </div>
   
-  <div class="circle-button button-print button-href-checkbox active-icon" data-alert="no">
+  <div class="circle-button button-print button-href-checkbox active-icon" >
     <a href="three-page.php?" class="IconPrintNormal50"></a>
   </div>
 
