--- a/metamodel-configBase.html
+++ b/metamodel-configBase.html
@@ -83,8 +83,8 @@
 	<div class="main-cont-right-breadcrumb-leftpart">
 		<ul class="breadcrumb">
         <li><a href="#">Каталог услуг</a> </li>
-         <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li>
-        <li class="active">Карточка услуги ITS001.001.004</li> 
+         <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ullam doloremque adipisci nobis culpa natus, totam quibusdam molestiae illo perspiciatis.</a> </li>
+        <li class="active">Карточка услуги ITS001.001.004</li>  
     </ul>
 	</div>
 	<div class="main-cont-right-breadcrumb-rightpart">
