--- a/catalog-tree.html
+++ b/catalog-tree.html
@@ -454,7 +454,7 @@
 	            <!-- table-tree -->
 									<table class="tree">
 	<tr class="treegrid-1 ">
-			<td class="tree-head"> <input type="checkbox" value="one-check"> Учет операций, выполняемых с денежной наличностью</td>
+			<td class="tree-head "> <input type="checkbox" value="one-check"> Учет операций, выполняемых с денежной наличностью</td>
 	</tr>
 
 	<tr class="treegrid-1-1 treegrid-parent-1 ">
@@ -476,54 +476,13 @@
 		</td>
 	</tr>
 
-	<tr class="treegrid-1-2-1-1 treegrid-parent-1-2-1 ">
-		<td class="tree-indent-row ">
-		 	<table class=" first-col-bold table table-striped table-hover border-around fz12"> 
-         	<thead>
-         		<tr>
-         			<th>Название SLA</th>
-         			<th>Описание</th>
-         			<th>Статус</th>
-         			<th>Категория</th>
-         			<th>Заказчик</th>
-         		</tr>
-         	</thead>
-         	<tbody>
-         		<tr>
-         			<td>
-								<input type="checkbox" value="get-check">
-         				<a href="#">Соглашение об уровне 	Ит-услуг, предоставляемых 	на базе ит-систем 2-го уровня 	критичности</a>
-         			</td>
-         			<td>Установка ПК,  а также программного обеспечения в части операционной системы, 	драйверов, базового офисного и другого стандартного ПО. Поддержка аппаратной части 	рабочих мест пользователей. Подключение к ЛВС Банка России.	Организация и сопровождение гарантийного и послегарантийного ремонта ПК.</td>
-         			<td>С 8:00 до 18:00 по 	локальному времени 	(с учетом реальной 	необходимости, 	определяемой</td>
-         			<td>Технологические окна для 	регламентных работ в обеденное время.</td>
-         			<td>Для всех ТУ (для некоторых ТУ в части монеты из драгоценных 	металлов)</td>
-         		</tr>
-         		<tr>
-         			<td>
-								<input type="checkbox" value="one-check">
-         				<a href="#">Соглашение об уровне 	Ит-услуг, предоставляемых 	на базе ит-систем 2-го уровня 	критичности</a>
-         			</td>
-         			<td>Установка ПК,  а также программного обеспечения в части операционной системы, 	драйверов, базового офисного и другого стандартного ПО. Поддержка аппаратной части 	рабочих мест пользователей. Подключение к ЛВС Банка России.	Организация и сопровождение гарантийного и послегарантийного ремонта ПК.</td>
-         			<td>С 8:00 до 18:00 по 	локальному времени 	(с учетом реальной 	необходимости, 	определяемой</td>
-         			<td>Технологические окна для 	регламентных работ в обеденное время.</td>
-         			<td>Для всех ТУ (для некоторых ТУ в части монеты из драгоценных 	металлов)</td> 
-         		</tr>
-         		<tr>
-         			<td>
-								<input type="checkbox" value="two-check">
-         				<a href="#">Соглашение об уровне 	Ит-услуг, предоставляемых 	на базе ит-систем 2-го уровня 	критичности</a>
-         			</td>
-         			<td>Установка ПК,  а также программного обеспечения в части операционной системы, 	драйверов, базового офисного и другого стандартного ПО. Поддержка аппаратной части 	рабочих мест пользователей. Подключение к ЛВС Банка России.	Организация и сопровождение гарантийного и послегарантийного ремонта ПК.</td>
-         			<td>С 8:00 до 18:00 по 	локальному времени 	(с учетом реальной 	необходимости, 	определяемой</td>
-         			<td>Технологические окна для 	регламентных работ в обеденное время.</td>
-         			<td>Для всех ТУ (для некоторых ТУ в части монеты из драгоценных 	металлов)</td>
-         		</tr>
-         		
-         	</tbody>
-         </table> 
-		</td>
-	</tr>
+
+   <tr class="treegrid-5-1 treegrid-parent-1 ">
+         <td class="tree-head tree-indent-row"> 
+            <input type="checkbox" value="two-check">
+            Учет операций, выполняемых с денежной наличностью оборотной кассы и ценностями
+         </td>
+   </tr>
 
 	<!-- // Second row -->
 	<tr class="treegrid-2 ">
