--- a/crit-syst.html
+++ b/crit-syst.html
@@ -26,10 +26,10 @@
     <div class="head-right-avatar-menu">
       <div class="head-right-avatar-menu-flex">
         <a href="#" class="head-right-avatar-menu-item">Личный кабинет</a>
-        <a href="#" class="head-right-avatar-menu-item"></a>
+        <a href="#" class="head-right-avatar-menu-item">Настройки</a>
         <a href="#" class="head-right-avatar-menu-item">Выйти</a>
       </div>
-    </div>
+    </div> 
   </div>
   <!-- hidden-table one-->
   <div class="col-md-4 main-cont-right-wraper-right hidden-table-toggle hidden-table-toggle-one hidden" >
