--- a/news.html
+++ b/news.html
@@ -263,7 +263,7 @@
 												</div>
 												<div class="news-left-items-right">
 													<div class="news-left-items-right-title">Ведение каталога</div>
-													<div class="news-left-items-right-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos incidunt similique commodi quae recusandae id, quos delectus. Eum necessitatibus molestiae eaque nam magnam praesentium, accusamus asperiores error excepturi harum alias placeat odit sed eligendi! Beatae atque tenetur repudiandae. Quia, quaerat.</div>
+													<div class="news-left-items-right-text">Lorem es error excepturi harum alias placeat odit sed eligendi! Beatae atque tenetur repudiandae. </div>
 												</div>
 											</div>
 											<!-- news-left-items -->
