--- a/news.html
+++ b/news.html
@@ -252,7 +252,7 @@
 	            <div class="main-cont-right-inner row">
 								<div class="news-wraper">
 									<!-- news-left -->
-									<div class="news-left col-md-8">
+									<div class="news-left col-lg-9 col-md-10 col-sm-12 col-xs-12">
 										<div class="news-title">Основные возможности AC ОЭ ИТС</div>
 										<div class="news-left-wrap">
 
@@ -309,7 +309,7 @@
 									<!-- news-left -->
 
 									<!-- news-right -->
-									<div class="news-right col-md-4">
+									<div class="news-right col-md-offset-0 col-md-3  col-sm-12 ">
 										<div class="news-title">Новости AC ОЭ ИТС</div>
 										<!-- news-right-item -->
 										<div class="news-right-item">
