--- a/add-new-service.html
+++ b/add-new-service.html
@@ -226,6 +226,18 @@
           </div>
         <!-- main-cont-left-menu-item -->
 
+        <!-- main-cont-left-menu-item -->
+          <a href="">
+            <div class="main-cont-left-menu-item ">
+             <span class="icon-interface main-cont-left-menu-item-icon"></span>
+             <div class="main-cont-left-menu-item-name">
+               SLA
+             </div>
+            </div>
+          </a>
+         
+        <!-- main-cont-left-menu-item -->
+
     </div>
 </div> 
        <!-- main-cont-left -->
