add page SLA.html + tools.html

--- a/news.html
+++ b/news.html
@@ -249,7 +249,8 @@
 						<div class="main-cont-right-wraper">
 	           <!-- breadcrumb -->
 	            		<div class="main-cont-right-breadcrumb">
-    	<div class="main-cont-right-breadcrumb-leftpart pull-left">
+    	<!-- <div class="main-cont-right-breadcrumb-leftpart pull-left"> -->
+        <div class="main-cont-right-breadcrumb-leftpart">
     		<ul class="breadcrumb">
             <li><a href="#">Каталог услуг</a> </li>
             <li><nobr> </nobr><a href="#">
